microk8s/endpoints/endpoint-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: endpoint
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: endpoint
        tag: endpoint
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      serviceAccountName: endpoints-sa
      containers:
      - env:
        - name: JAVA_OPTS
          value: "-Dconfig.resource=endpoint-application-k8s.conf"
        image: localhost:32000/akka-typed-blog-distributed-state/cluster:0.1.1
        #health
        readinessProbe:
          httpGet:
            path: /ready
            port: akka-mgmt-http
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /alive
            port: akka-mgmt-http
          initialDelaySeconds: 90
          periodSeconds: 30
        #health
        name: endpoint
        ports:
        - containerPort: 8082
        # akka remoting
        - name: remoting
          containerPort: 2552
          protocol: TCP
        # external http
        - name: akka-mgmt-http
          containerPort: 8558
          protocol: TCP
        - name: node-metrics
          containerPort: 9001
        resources: {}
      restartPolicy: Always
status: {}
