microk8s/endpoints/endpoint-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: endpoint
  labels:
    app-monitoring: artifactstate
spec:
  type: ClusterIP
  ports:
    - name: "8082"
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: akka-mgmt-http
      protocol: TCP
      port: 8558
      targetPort: akka-mgmt-http
  selector:
    tag: endpoint
